 * Added the optional section ScrollbarTransientSlider.
 * Compensate for a change in the vertical positioning of submenus with Qt 5.11.
 * Added a key for menu separator height.
 * Added a key (to Kvantum manager) for ignoring the inactive state.
 * For an exact vertical centering, give an even height to the bounding rectangle of the text and the icon beside it.

V0.10.6
---------
 * Distinguish between a real tooltip and a window with the tooltip flag on unpolishing.
 * Fixed the minW key with line-edits.
 * Don't make a window translucent if the FramelessWindowHint or X11BypassWindowManagerHint flag is set for it after it's created but before it's polished.
 * Prevent redundant flashes with focus-in/out animations.
 * Fixed the focus rectangles of tabbar scroll buttons.
 * No space between the tab contents and a nonexistent tabbar.
 * Added a hacking key (to Kvantum Manager) for the middle-click scroll jump (with the left-click jump as the default).
 * Handle the CMP0071 policy of CMAKE >= 3.10 (let AUTOMOC and AUTOUIC process GENERATED files).
 * Make combo_focus_rect use the normal panel to draw a combo box with the keyboard focus.
 * A workaround for a Qt5 mess in painting the "clear" button of line-edits (the issue is visible in Fusion too).
 * Remove "foreach" with Qt5.
 * Don't add the icon size to the size of check boxes or radio buttons when there's no icon.
 * Replaced QRegExp with QRegularExpression.
 * Support the global config files "$XDG_CONFIG_DIRS/Kvantum/kvantum.kvconfig". (For distros.)
 * Fixed an old miscalculation in drawing tab labels.
 * Major enhancements and simplifications in the state change animation code through "QStyleOption::styleObject()". As a result, faulty animations are fixed and some missing animations are added, especially for all kinds of buttons.
 * Fixed the disabled text color of auto-raised toolbuttons in dark-and-light themes.