@@ -14,6 +14,7 @@ V0.10.7
  * Added a key for menu separator height.
  * Added a key (to Kvantum manager) for ignoring the inactive state.
  * For an exact vertical centering, give an even height to the bounding rectangle of the text and the icon beside it.
+ * Consider special fonts for menu-items (some apps may use them to show different things).
 
 V0.10.6
 ---------
